--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>java-react</artifactId>
+	<artifactId>final-task-tracker</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>java-react</name>
-	<description>java-react</description>
+	<name>final-task-tracker</name>
+	<description>final-task-tracker</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
