--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@ target/
 *.iws
 *.iml
 *.ipr
-application.properties
 
 ### NetBeans ###
 /nbproject/private/
@@ -32,3 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+###DB Stuff###
+application.properties
